# hogsmade

./: .codex.md  .cursorrules  .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .session-state.json  .trufflehog-exclude-paths.txt  .trufflehog.yml  .windsurfrules  28-steps.md  AGENT-TEAM-CODEBASE-AUDIT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CascadeProjects-threat-model.md  EXECUTION_PLAN_SHIPPABLE_INSTANCES.md  GLIMPSE-GUIDE.md  INTEGRATION_COMPLETE.md  LICENSE  MCP_GUARD_HARDENING.md  MCP_MIGRATION_TEMPLATE.ts  MCP_SERVER_DEMO.md  MCP_SETUP_GUIDE.md  PULSE-WORKFLOW.md  README.md  SECURITY.md  SECURITY_STATUS.md  TestMeritGuard.ts  YOUR_MCP_ECOSYSTEM_GUIDE.md  agent-security-remediation-prompt.md  apply_unicode_fixes.py  claude_code_config.example.json  claude_code_config.json  create_test_envelope.py  debug_fingerprint.py  (+41 more)
.github/: CODEOWNERS  (+8 more)
DIO/: .gitignore  __init__.py  combined_space.py  pyproject.toml  test_combined_space.py  visual-reference.html
DIO/.github/agents/: semantic-officer.agent.md
DIO/control_room/: README.md  __init__.py  airflow.py  constants.py  light_control.py  test_airflow.py  test_constants.py  test_light_control.py  test_smoke.py
DIO/control_room/serverroom docs/: response-protocols.md
DIO/program/python-basics/: EXAMPLE.md  INSIGHTS.md
DIO/program/python-basics/src/: __init__.py
DIO/program/python-basics/tests/: README.md  __init__.py  conftest.py
DIO/roots/security/scripts/: migration_ruleset.json  stale_inventory_audit.py  test_stale_inventory_audit.py
Projects/GATE/harness/: Makefile  pyproject.toml
Projects/GATE/harness/manifests/: harness-manifest-20260409-065914.json  harness-manifest-20260409-065914.md  harness-post-execution-async.md  harness-post-execution.md
(+1348 files in other folders)
