[project]
name = "dio"
version = "0.1.0"
description = "DIO — control room suite and interactive episode tool"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["control_room", "roots"]

[tool.pytest.ini_options]
testpaths = ["roots/security/scripts"]
