[project]
name = "gate-harness"
version = "0.1.0"
description = "Deployment harness engineering for targeted manifests — (4x4)^2 GRID cycle distribution with quantized pipeline delivery"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10",
    "structlog>=24.4",
    "pyyaml>=6.0",
]

[project.scripts]
harness = "harness.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]

[dependency-groups]
dev = ["pytest>=8.3", "pytest-asyncio>=0.25", "ruff>=0.11"]
test = ["pytest>=8.3"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
